Fix for navigation folder not being visible in safari - PIRATE-4654

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -482,6 +482,7 @@ select::-ms-expand{
             -ms-transition:     height 0.75s ease-in-out, opacity 0.75s ease-in-out, visibility 0.75s ease-in-out;
             -o-transition:      height 0.75s ease-in-out, opacity 0.75s ease-in-out, visibility 0.75s ease-in-out;
             visibility: visible;
+            z-index: 9999;
         }
     }
     &:last-child {
